--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="title-tag">
         <div class="title-container">
           <h1>Isaac Newton</h1>
-          <h2>Probably the best known physician</h2>  
+          <h2>Probably the best known physicist</h2>  
         </div>
         <a href="#bio" id="land-btn">
           <i class="fa-solid fa-angles-down" id="down-btn"></i>
