--- a/index.html
+++ b/index.html
@@ -8,21 +8,24 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <!-- styles -->
-  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="assets/fontawesome-free-6.0.0-web/css/all.min.css">
   <!-- scripts -->
-  <script src="scripts/app.js"></script>
+  <script src="js/app.js"></script>
   <title>Isaac Newton</title>
 </head>
 <body>
   <header class="header">
     <a href="#main"><img class="logo" src="assets/logo.png"></a>
     <nav class="navbar">
-      <a class="nav-element" href="#main">Home</a>
-      <a class="nav-element"  href="#bio">Bio</a>
-      <a class="nav-element"  href="#live-story">Live</a>
-      <a class="nav-element"  href="#achievements">Achievements</a>
+      <a class="nav-element" href="#main" onclick="mobileNav()">Home</a>
+      <a class="nav-element"  href="#bio" onclick="mobileNav()">Bio</a>
+      <a class="nav-element"  href="#live-story" onclick="mobileNav()">Live</a>
+      <a class="nav-element"  href="#achievements" onclick="mobileNav()">Achievements</a>
     </nav>
+    <a href="javascript:void(0);" class="icon" onclick="mobileNav()">
+      <i class="fa fa-bars"></i>
+    </a>
   </header>
   <main>
     <section id="main" class="pages" style="scroll-margin-top: 100px;">
