--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <header class="header">
-    <a href="#main"><img class="logo" src="assets/logo.png"></a>
+    <a href="#main"><img class="logo" src="assets/logo.svg"></a>
     <nav class="navbar">
       <a class="nav-element" href="#main" onclick="mobileNav()">Home</a>
       <a class="nav-element"  href="#bio" onclick="mobileNav()">Bio</a>
