--- a/index.html
+++ b/index.html
@@ -31,42 +31,92 @@
     <section id="main" class="pages" style="scroll-margin-top: 100px;">
       <div class="title-tag">
         <div class="title-container">
-          <h1>Isaac Newton</h1>
-          <h2>Probably the best known physicist</h2>
+          <h1 class="bright-font">Isaac Newton</h1>
+          <h2 class="bright-font">Probably the best known physicist</h2>
         </div>
         <a href="#bio" id="land-btn">
           <i class="fa-solid fa-angles-down" id="down-btn"></i>
         </a>
       </div>
     </section>
-    <section id="bio" class="pages">
-      <h3 class="sticktop bright-font">Biography</h3>
-      <div class="wrapper">
-        <div class="col-1">
-          <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-          </p>
+    <section id="bio" class="pages bright-font">
+      <h3 class="sticktop dark-font">Biography</h3>
+      <div class="row">
+        <div class="col-1 spacer"></div>
+        <div class="col-4 flex-col">
+          <div class="img-container">
+            <img src="/assets/newton.svg" alt="" width="200rem" z-index="-1">
+          </div>
+          <div class="flex-col dark-font">
+            <div class="flex-row">
+              <p>
+                Name:
+              </p>
+              <p>
+                Isaac Newton
+              </p>
+            </div>
+            <div class="flex-row">
+              <p>
+                Geburtsdatum:
+              </p>
+              <p>
+                4.Januar.1643
+              </p>
+            </div>
+            <div class="flex-row">
+              <p>
+                Alter:
+              </p>
+              <p>
+                84 Jahre
+              </p>
+            </div>
+            <div class="flex-row">
+              <p>
+                Todesdatum:
+              </p>
+              <p>
+                31.März.1727
+              </p>
+            </div>
+            <div class="flex-row">
+              <p>
+                Sterbeort:
+              </p>
+              <p>
+                Kensington, London, England
+              </p>
+            </div>
+            <div class="flex-row">
+              <p>
+                Grabstätte:
+              </p>
+              <p>
+                Westminster Abbey, London, England
+              </p>
+            </div>
+            <div class="flex-row">
+              <p>
+                Sternzeichen:
+              </p>
+              <p>
+                Steinbock
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="col-4">
-          <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-          </p>
-        </div>
-        <div class="col-1">
-          <p>
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-          </p>
-        </div>
+        <div class="col-1 spacer"></div>
       </div>
     </section>
-    <section id="live-story" class="pages">
+    <section id="live-story" class="pages bright-font">
       <h3 class="sticktop bright-font">Live Story</h3>
     </section>
-    <section id="achievements" class="pages">
+    <section id="achievements" class="pages dark-font">
       <h3 class="sticktop dark-font">Achievements</h3>
     </section>
   </main>
-  <footer id="footer" class="pages">
+  <footer id="footer" class="pages bright-font">
   </footer>
 </body>
 </html>
