image not displaying

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="col-1 spacer"></div>
         <div class="col-4 flex-col">
           <div class="img-container">
-            <img src="/assets/newton.svg" alt="" width="200rem" z-index="-1">
+            <img src="assets/newton.svg" alt="" width="200rem" z-index="-1">
           </div>
           <div class="flex-col dark-font">
             <div class="flex-row">
