--- a/pages/legal.html
+++ b/pages/legal.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header class="header">
-    <a href="#main"><img class="logo" src="../assets/logo.svg"></a>
+    <a href="../index.html#main"><img class="logo" src="../assets/logo.svg"></a>
     <nav class="navbar">
       <a class="nav-element" href="../index.html#main" onclick="mobileNav()">Home</a>
       <a class="nav-element"  href="../index.html#bio" onclick="mobileNav()">Biographie</a>
