--- a/pages/legal.html
+++ b/pages/legal.html
@@ -10,7 +10,7 @@
   <!-- styles -->
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="../assets/fontawesome-free-6.0.0-web/css/all.min.css">
-  <link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
+  <link rel="icon" type="image/vnd.microsoft.icon" href="../favicon.ico">
   <!-- scripts -->
   <script src="../js/app.js"></script>
   <title>Isaac Newton</title>
